<resources>
    <string name="app_name">ProjectM</string>
    <string name="title_activity_home">ProjectM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tuner">Tuner</string>
    <string name="title_metronome">Metronome</string>
    <string name="title_backing_tracks">BACKING TRACKS</string>
    <string name="title_settings">SETTINGS</string>
    <string name="version">VERSION 0.4.8 Alpha Preview</string>
    <string name="title_activity_info">About</string>
    <string name="github">GITHUB</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="reddit">REDDIT</string>
    <string name="facebook">FACEBOOK</string>
    <string name="telegram">TELEGRAM</string>
    <string name="twitter">TWITTER</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_about">About</string>
    <string name="btn_oss">"Open Source Licenses"</string>
    <string name="btn_about">"About"</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="oss_text">Open source licenses will be shown here</string>
    <string name="light_theme">Light Theme</string>
    <string name="author">Yağız Şimşek</string>
    <string name="follow">Follow me</string>
    <string name="thanks">Thanks to</string>
    <string name="changelog">Changelog</string>
    <string name="ok">ok</string>
    <!-- TUNER -->
    <string name="pref_dark_theme_key" translatable="false">pref_dark_theme</string>
    <string name="pref_dark_theme_title">Dark theme</string>
    <string name="pref_tuning_key" translatable="false">pref_tuning</string>
    <string name="pref_tuning_title">Tuning</string>
    <!-- Tuning names -->
    <string name="standard_tuning">Standard</string>
    <string name="open_a_tuning">Open A</string>
    <string name="open_g_tuning">Open G</string>
    <string name="open_d_tuning">Open D</string>
    <string name="drop_d_tuning">Drop D</string>

    <string name="standard_tuning_val" translatable="false">Standard</string>
    <string name="open_a_tuning_val" translatable="false">Open A</string>
    <string name="open_g_tuning_val" translatable="false">Open G</string>
    <string name="open_d_tuning_val" translatable="false">Open D</string>
    <string name="drop_d_tuning_val" translatable="false">Drop D</string>

    <string-array name="pref_tuning_entries">
        <item>@string/standard_tuning</item>
        <item>@string/open_a_tuning</item>
        <item>@string/open_g_tuning</item>
        <item>@string/open_d_tuning</item>
        <item>@string/drop_d_tuning</item>
    </string-array>

    <string-array name="pref_tuning_values">
        <item>@string/standard_tuning_val</item>
        <item>@string/open_a_tuning_val</item>
        <item>@string/open_g_tuning_val</item>
        <item>@string/open_d_tuning_val</item>
        <item>@string/drop_d_tuning_val</item>
    </string-array>
    <string name="permission">Permission</string>
    <string name="permission_record_audio">The app must be able to use the microphone.</string>
    <string name="audio_record_init_error">Could not initialize AudioRecord.</string>
    <string name="pref_privacy_policy_title">Privacy policy</string>
    <string name="pref_privacy_policy_key" translatable="false">pref_privacy_policy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_nav">NavActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- INTRO SLIDER -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="microphone">ALLOW MICROPHONE</string>
    <string name="action_close">Close</string>

</resources>
