<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:visibility="visible"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="2dp"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="App Settings" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_dt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:padding="8dp"
                android:checked="false"
                android:textColor="#000"
                tools:text="@string/light_theme" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="2dp"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tuner Settings" />

            <Button
                android:drawableStart="@drawable/ic_clef_bass"
                android:gravity="start|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:id="@+id/btn_select_instrument"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="   Select Instrument" />

            <Button
                android:drawableStart="@drawable/ic_guitar_pick_outline"
                android:gravity="start|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:id="@+id/btn_select_tuning"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="   Select Tuning" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="2dp"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Metronome Settings" />

            <Button
                android:drawableStart="@drawable/ic_music_note_quarter"
                android:gravity="start|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:id="@+id/btn_tick_snd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="   Tick sound" />

            <Button
                android:drawableStart="@drawable/ic_heart_outline"
                android:gravity="start|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="   Another Button" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:layout_margin="2dp"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:visibility="gone"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_about" />


            <TextView
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Version 0.1.3 Alpha Preview" />

            <Button
                android:drawableStart="@drawable/ic_information_outline"
                android:gravity="start|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/btn_about" />

            <Button
                android:drawableStart="@drawable/ic_information_outline"
                android:gravity="start|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:id="@+id/btn_oss"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/btn_oss" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>